--- a/src/index.html
+++ b/src/index.html
@@ -47,13 +47,13 @@
       </div>
 
       <div class="bg-blue-700 mb-4 p-2 grid grid-cols-[2fr_1fr] gap-2">
-        <input type="text" class="flex flex-grow rounded-3xl bg-amber-300  placeholder:text-white placeholder:justify-center" id="promoCodeInput" placeholder="Enter promo code" />
+        <input type="text" class="flex flex-grow rounded-3xl text-black text-center bg-amber-300  placeholder:text-black placeholder:opacity-40 placeholder:pl-1.5 placeholder:justify-center placeholder:align-baseline " id="promoCodeInput" placeholder="Enter promo code" />
         <button id="applyPromoCode" class="bg-blue-400 text-white rounded-3xl px-4">Apply</button>
       </div>
 
       <div class="cart-total">
-        <div class="total-label" style="font-size:16px ;">Total:</div>
-        <div class="total-amount" id="cartTotal" style="font-size:16px;">$0.00</div>
+        <div class="total-label" style="font-size:20px ;">Total:</div>
+        <div class="total-amount" id="cartTotal" style="font-size:20px;">$0.00</div>
       </div>
       
       <div class="btn">
@@ -71,4 +71,5 @@
 
 <script src="scripts.js"></script>
 </body>
+
 </html>
